--- a/style.css
+++ b/style.css
@@ -113,3 +113,37 @@ hr{
     margin-bottom: 10px;
     font-size: 3.7vw;
 }
+.train-section{
+    width: 1140px;
+    margin: auto;
+}
+.train-section h1{
+    font-size: 50px;
+    font-weight: 600;
+    color: #E21835 ;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 30px;
+}
+.sections{
+    display: flex;
+    margin: auto;
+    text-align: center;
+    align-content: space-around;
+    justify-content: space-between;
+    gap: 15px;
+}
+.sections img{
+    border-radius: 10px;
+}
+.sections h2{
+    font-size: 1.75rem;
+    color:#240858;
+    margin-top: 19px;
+    margin-bottom: 16px;
+}
+.sections p{
+    color: #7A7A7A;
+    font-weight: 300;
+    line-height: 23px;
+}
